mobile issue fixed can now close on mobile

--- a/my-turborepo/apps/nextjs/src/app/_components/customCss.scss
+++ b/my-turborepo/apps/nextjs/src/app/_components/customCss.scss
@@ -34,7 +34,7 @@ $total: 10;
 
   .svg:nth-child(#{$i}) {
     left: random(120) * 1% - 20;
-    animation: raise#{$i} 6 + random(15) + s linear infinite;
+    animation: raise#{$i} 6+random(15)+s linear infinite;
     animation-delay: random(5) - 5 + s;
     transform: scale(0.3 * $i - 0.6) rotate(random(360) + deg);
     z-index: $i - 7;
@@ -101,7 +101,7 @@ $total: 10;
       background-color: #e4e3e4;
     }
 
-    &:focus {
+    &:hover {
       background-color: #c2c2c2;
 
       .close {
@@ -134,11 +134,9 @@ $total: 10;
   }
 
   &:hover {
-    background-image: linear-gradient(
-      to bottom,
-      rgba(182, 221, 249, 0.5),
-      rgba(224, 227, 230, 0.5),
-      rgba(107, 162, 254, 0.5)
-    );
+    background-image: linear-gradient(to bottom,
+        rgba(182, 221, 249, 0.5),
+        rgba(224, 227, 230, 0.5),
+        rgba(107, 162, 254, 0.5));
   }
 }
